amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.

  
  FIX: Invoking "Track Information" in Collection Browser sometimes crashed
       the application (BR 80266).
  FIX: In CollectionBrowser's folder setup dialog pressing cancel did not abort
       (BR 80451). Thanks to Michael Pyne <pynm0001@comcast.net> for patch.
  ADD: Option for selecting sound output system (OSS/Alsa). Currently only
       used with GStreamer engine.
  CHG: Extended and updated handbook, thanks to Mike Diehl <madpenguin8@yahoo.com>.
  ADD: Context menu item "Make Playlist" in Collection Browser generates new
       playlists on the fly, without the need for drag-and-drop.  
  CHG: Renamed several files and folders in the source code tree, resulting in
       improved code accessibility. 
 
VERSION 1.0-beta2:
  FIX: Crash on AMD64 due to assumption about pointer size.
  CHG: SQLite library sourcecode now included with amaroK.
  CHG: The collection-thread now inserts its data in a temporary database while
       scanning, which allows us to safely use the collection in the meantime.
       This is done by two concurrent sqlite-connections (thread-safe). Wrote a
       new class named CollectionDB, which handles the database communication
       for the collection.
  ADD: URLDrag from Playlist, so you can drag and drop to xmms. Doesn't work with
       the FileBrowser yet, but it will!
  CHG: CollectionBrowser now fills the database inside of a thread, resulting in
       improved performance.
  ADD: Mini track-position slider in statusbar.
  FIX: Don't try to crossfade with engines that do not support this feature.
  ADD: XMMS visualization plugins can be configured with their GUI.
  FIX: Collection filtering had some regressions
  FIX: Loader on some systems not able to start amaroK.
  FIX: Switching engines at runtime breaking volume control.
  FIX: GstEngine skipping tracks directly after starting, when crossfading enabled.